--- a/Blog Pessoal/src/app/componentes/rodape/rodape.component.html
+++ b/Blog Pessoal/src/app/componentes/rodape/rodape.component.html
@@ -13,21 +13,21 @@
 
         <ul class="social-network">
             <li>
-                <a href="https://www.facebook.com" target="_blank">    
-                    <i class= "fa fa-facebook-square" aria-hidden="true"></i>
-            </a>
-            </li>
-
-            <li>
-                <a href="https://www.instagram.com/" target="_blank"> 
-                    <i classe="fa fa-instagram" aria-hidden="true"> </i>
+                <a href="https://www.instagram.com/generationbrasil/" target="_blank" class="icoInstagram">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
             </li>
-
+            
             <li>
-                <a href="https://www.linkedin.com" target="_blank">   
-                    <i class="fa fa-linkedin-square"></i>>
-                </a> 
+                <a href="https://www.facebook.com/school/generationbrasil/mycompany/" target="_blank" class="icoFacebook">
+                    <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                </a>
+            </li>
+        
+            <li>
+                <a href="https://www.linkedin.com/school/generationbrasil/mycompany/" target="_blank" class="icoLinkedin">
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                </a>
             </li>
         </ul>
 
