--- a/Blog Pessoal/src/app/componentes/menu/menu.component.html
+++ b/Blog Pessoal/src/app/componentes/menu/menu.component.html
@@ -1,35 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto d-flex text-light aligh-itens">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+         <img src="https://i.imgur.com/bOcXjOf.png" alt="imagem do user" width="50px" height="50px"
+          class="img-fluid rounded-circle"> 
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+        <li class="nav-item pl-3">
+          <p class="m-0 text-light font-weight-bold  fs-16" >Nome do usuário</p>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+        <li class="nav-item pl-3">
+          <a href="">
+          <p class=" text-light fs-16 m-0"><i class="fa fa-pencil-square-o font-weight-bold text-black fs-16" aria-hidden="true"></i> </p>
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Ação</a>
-            <a class="dropdown-item" href="#">Outra ação</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Algo mais aqui</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Desativado</a>
-        </li>
+        </li>    
+        
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-      </form>
+     
+      <ul class="navbar-nav ml-auto d-flex allign-items-center"> 
+        <li class="nav-item pl-3">
+            <a class="m-0 font-weight-bold text-light  fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i>
+            </a>
+        </li>
+
+      </ul>
     </div>
   </nav>
